Define the DSRK-Req attribute as octets so their output formatting is better

--- a/visited_radius/Dockerfile
+++ b/visited_radius/Dockerfile
@@ -22,7 +22,7 @@ RUN make install || make install
 COPY client.conf .
 RUN cat client.conf >> /usr/local/etc/raddb/clients.conf
 # add dictionary entry for the DSRK-Req attribute
-RUN sed -i "/SAML-AAA-Assertion/a ATTRIBUTE DSRK-Req 150 string" /usr/local/share/freeradius/dictionary.ukerna
+RUN sed -i "/SAML-AAA-Assertion/a ATTRIBUTE DSRK-Req 150 octets" /usr/local/share/freeradius/dictionary.ukerna
 # configure proxies
 COPY proxy.conf .
 RUN cat proxy.conf >> /usr/local/etc/raddb/proxy.conf
